fix: clients background img y align to top

--- a/less/engineer-apart.less
+++ b/less/engineer-apart.less
@@ -393,7 +393,7 @@ section.projects {
           width: 100%;
           // height: 260px;
           background-size: cover;
-          background-position: center center;
+          background-position: center top;
         }
       }
 
